--- a/column_transformer/columns transformer.ipynb
+++ b/column_transformer/columns transformer.ipynb
@@ -2,15 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import seaborn as sns \n",
+    "import matplotlib.pyplot as plt "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "test2",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
