--- a/handaling_missiing_vlue/missing_numerical_values/univariate_imputation.ipynb
+++ b/handaling_missiing_vlue/missing_numerical_values/univariate_imputation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[891 rows x 3 columns]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "[891 rows x 5 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -376,24 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 241,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.legend.Legend at 0x24bc0281100>"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# kda ploting to check distributation\n",
     "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns \n",
+    "import seaborn as sns "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "fig =plt.Figure()\n",
     "ax=fig.add_subplot(111)\n",
@@ -410,12 +408,14 @@
     "#add legend\n",
     "\n",
     "lines,labels=ax.get_legend_handles_labels()\n",
-    "ax.legend()"
+    "labels=['age','age_mean','age_mode']\n",
+    "ax.legend(lines,labels,loc='best')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
