--- a/handaling_missiing_vlue/missing_catagorical_value/missing_catagorical_univariant.ipynb
+++ b/handaling_missiing_vlue/missing_catagorical_value/missing_catagorical_univariant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4          TA         TA     250000"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "<Axes: xlabel='FireplaceQu'>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "<Axes: xlabel='GarageQual'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[1460 rows x 5 columns]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "<Axes: xlabel='SalePrice', ylabel='Density'>"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "Text(0.5, 1.0, 'GarageQual')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "Text(0.5, 1.0, 'FireplaceQu')"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "[1460 rows x 3 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "Name: SalePrice, Length: 1460, dtype: int64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,8 +699,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# using skit learn for impututation of catagorical variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +750,7 @@
        "       ['TA', 'TA']], dtype=object)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1061,7 @@
        "       ['Gd', 'TA']], dtype=object)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1081,7 @@
        "array(['Gd', 'TA'], dtype=object)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
