--- a/outliers_handaling/IQR_method.ipynb
+++ b/outliers_handaling/IQR_method.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# note: IQR method onl use for non-normal distributation data "
+    "# note: IQR method only use for non-normal distributation data "
    ]
   },
   {
